feat(#148): 보안 취약점 후속 조치 — X-Forwarded-For 수정·레이트리밋 완성·인가 일관성·운영 설정
- H1: HttpRequestUtils XFF [0] → [last] (ALB 환경 IP 스푸핑 방어)
- H2: /auth/login IP 기반 레이트리밋 추가 (signup/reissue 패턴 통일)
- M2: 쓰기 엔드포인트 레이트리밋 전수 적용 (컨트롤러 11개 + 서비스 2개, Admin 제외)
- M3: AuctionController Admin 핸들러 3개 @PreAuthorize("hasRole('ADMIN')") 메서드 레벨 추가
- M6: application-prod.yaml 신규 — ddl-auto: validate
- L3: SecurityConfig CORS allowedOriginPatterns 환경변수화 (CORS_ALLOWED_ORIGINS)
- 테스트: HttpRequestUtilsTest(신규), AuthControllerTest·AuctionControllerTest 확장,
  AuctionAdminAuthorizationTest(신규, 리플렉션 기반 @PreAuthorize 검증)
- ADR-009 작성

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>